--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,19 +1,11 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Recipes Project</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="container results">
-                <div class="row" id="results"></div>
-            <div class="row">
-            <footer class="six columns offset-by-three">
-                <p id="test"></p>
-                <p><a href="#recipe">Test Recipe</a></p>
-            </footer>
-            </div>
-        </div>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <title>Amarillo Make-a-thon Events</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <div id="app-container"></div>
+  </body>
 </html>
