--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="app-container"></div>
+    <div id="app-container">Hello</div>
+    <i class="pencil"></i>
   </body>
 </html>
