--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,2 +1,15 @@
 @import 'reset';
+@import 'grid';
 @import 'variables';
+
+// Components
+@import 'components/featured-events';
+@import 'components/homepage-events-filters';
+@import 'components/homepage-events-list';
+@import 'components/site-footer';
+@import 'components/site-navigation';
+
+.holyshit {
+  color: red;
+  font-weight: bold;
+}
