--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="app-container">Hello</div>
-    <i class="pencil"></i>
+    {{> components/shared/site-navigation }}
+    <div id="app-container"></div>
+    {{> components/shared/site-footer }}
   </body>
 </html>
