--- a/templates/components/shared/site-navigation.hbs
+++ b/templates/components/shared/site-navigation.hbs
@@ -1,10 +1,11 @@
 <nav id="site-nav">
-  <h1 class="page-title">Title</h1>
+  <div class="content-container">
+    <h1 class="page-title">
+      <a href="/">Amarillo Events</a>
+    </h1>
 
-  <div class="menu-items">
-    <ul>
-      <li><a href="/">Homepage</a></li>
-      <li><a href="/event/123">Event Details</a></li>
-    </ul>
+    <div class="menu-actions">
+      <a class="submit-event-button" href="/create-event">Submit an Event</a>
+    </div>
   </div>
 </nav>
