--- a/templates/components/homepage/featured-events.hbs
+++ b/templates/components/homepage/featured-events.hbs
@@ -1,33 +1,33 @@
 <section class="featured-events">
-  <div class="featured-event">
+  <div class="featured-event event-1">
     <h2>
       <a href="event/23">Event Name</a>
     </h2>
-    <p>Event Description goes here</p>
-    <p>08/23/2017</p>
+    <p class="description">Event Description goes here</p>
+    <p class="date">08/23/2017</p>
   </div>
 
-  <div class="featured-event">
+  <div class="featured-event event-2">
     <h2>
-      <a href="event/24">Event Name</a>
+      <a href="event/23">Event Name</a>
     </h2>
-    <p>Event Description goes here</p>
-    <p>08/23/2017</p>
+    <p class="description">Event Description goes here</p>
+    <p class="date">08/23/2017</p>
   </div>
 
-  <div class="featured-event">
+  <div class="featured-event event-3">
     <h2>
-      <a href="event/25">Event Name</a>
+      <a href="event/23">Event Name</a>
     </h2>
-    <p>Event Description goes here</p>
-    <p>08/23/2017</p>
+    <p class="description">Event Description goes here</p>
+    <p class="date">08/23/2017</p>
   </div>
 
-  <div class="featured-event">
+  <div class="featured-event event-4">
     <h2>
-      <a href="event/26">Event Name</a>
+      <a href="event/23">Event Name</a>
     </h2>
-    <p>Event Description goes here</p>
-    <p>08/23/2017</p>
+    <p class="description">Event Description goes here</p>
+    <p class="date">08/23/2017</p>
   </div>
 </section>
