--- a/templates/event-details.hbs
+++ b/templates/event-details.hbs
@@ -1,3 +1,5 @@
 <section id="event-details-page">
-  <h1>Event Details Page</h1>
+  <div class="content-container">
+    <h1>Event Details Page</h1>
+  </div>
 </section>
