--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Amarillo Make-a-thon Events</title>
+    <title>Amarillo Events</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    {{> components/shared/site-navigation }}
-    <div id="app-container"></div>
-    {{> components/shared/site-footer }}
+    <main id="site-container">
+      {{> components/shared/site-navigation }}
+      <div id="page-container"></div>
+      {{> components/shared/site-footer }}
+    </main>
   </body>
 </html>
