--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,13 @@ body {
   text-align: center;
 }
 
+select {
+  border: 1px solid #DFE2E5;
+  margin-bottom: 10px;
+  font-size: 1.1em;
+  color: #7f8fa4;
+}
+
 .content-container {
   width: 1280px;
   margin: 0 auto;
