--- a/templates/components/homepage/homepage-events-list.hbs
+++ b/templates/components/homepage/homepage-events-list.hbs
@@ -1,33 +1,54 @@
 <div class="homepage-events-list">
+  <ul class="time-filters">
+    <li>
+      <a href="#" class="active">Today</a>
+    </li>
+    <li>
+      <a href="#">Tomorrow</a>
+    </li>
+    <li>
+      <a href="#">This Week</a>
+    </li>
+  </ul>
+
   <ol>
-    <li>
+    <li class="event">
       <div class="left-details">
-        <h3>Event Name</h3>
-        <p>Description of the event</p>
+        <h4>Event Name</h4>
+        <p class="date">08/23/2017 @ 7:30pm</p>
+        <p class="price">$25</p>
+
+        <p class="description">Description of the event for something that is occurring soon. You'll go and have fun.</p>
       </div>
       <div class="right-details">
-        <p>08/23/2017 @ 7:30pm</p>
-        <p>$25</p>
+        <button class="learn-more-button" type="button">Learn More</button>
+        <button class="add-to-calendar-button" type="button">Add to Calendar</button>
       </div>
     </li>
-    <li>
+    <li class="event">
       <div class="left-details">
-        <h3>Event Name</h3>
-        <p>Description of the event</p>
+        <h4>Event Name</h4>
+        <p class="date">08/23/2017 @ 7:30pm</p>
+        <p class="price">$25</p>
+
+        <p class="description">Description of the event for something that is occurring soon. You'll go and have fun.</p>
       </div>
       <div class="right-details">
-        <p>08/23/2017 @ 7:30pm</p>
-        <p>$25</p>
+        <button class="learn-more-button" type="button">Learn More</button>
+        <button class="add-to-calendar-button" type="button">Add to Calendar</button>
       </div>
     </li>
-    <li>
+    <li class="event">
       <div class="left-details">
-        <h3>Event Name</h3>
-        <p>Description of the event</p>
+        <h4>Event Name</h4>
+        <p class="date">08/23/2017 @ 7:30pm</p>
+        <p class="price">$25</p>
+
+        <p class="description">Description of the event for something that is occurring soon. You'll go and have fun.</p>
       </div>
       <div class="right-details">
-        <p>08/23/2017 @ 7:30pm</p>
-        <p>$25</p>
+        <button class="learn-more-button" type="button">Learn More</button>
+        <button class="add-to-calendar-button" type="button">Add to Calendar</button>
       </div>
     </li>
   </ol>
