--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -12,6 +12,34 @@
   font-size: .8em;
 }
 
+@mixin success-button() {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2a9ff6+0,1a92ec+100 */
+  background: #39b44a; /* Old browsers */
+  background: -moz-linear-gradient(top,  #39b44a 0%, #35ab44 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #39b44a 0%,#35ab44 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #39b44a 0%,#35ab44 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#39b44a', endColorstr='#35ab44',GradientType=0 ); /* IE6-9 */
+  border: 1px solid #249533;
+  border-radius: 3px;
+  color: white;
+  padding: 5px 7px;
+  font-size: .8em;
+}
+
+@mixin cta-button() {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2a9ff6+0,1a92ec+100 */
+  background: #4f5f71; /* Old browsers */
+  background: -moz-linear-gradient(top,  #4f5f71 0%, #3e4b5a 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #4f5f71 0%,#3e4b5a 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #4f5f71 0%,#3e4b5a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f5f71', endColorstr='#3e4b5a',GradientType=0 ); /* IE6-9 */
+  border: 1px solid #3b4958;
+  border-radius: 3px;
+  color: white;
+  padding: 5px 7px;
+  font-size: .8em;
+}
+
 @mixin no-link($color) {
   color: $color;
 
