--- a/templates/components/homepage/homepage-events-filters.hbs
+++ b/templates/components/homepage/homepage-events-filters.hbs
@@ -1,3 +1,17 @@
 <div class="homepage-events-filters">
-  <h3>Filters here</h3>
+  <h3 class="header">Filter by</h3>
+
+  <select>
+    <option>Location</option>
+  </select>
+
+  <select>
+    <option>Date</option>
+  </select>
+
+  <select>
+    <option>Category</option>
+  </select>
+
+  <button type="button" class="submit-event-button">Submit Event</button>
 </div>
