Got form shows for create event.  Updated mock model to have different data.

--- a/templates/components/homepage/featured-events.hbs
+++ b/templates/components/homepage/featured-events.hbs
@@ -2,7 +2,7 @@
   {{#each featuredEvents}}
   <div class="featured-event">
     <h2>
-      <a href="event/id">{{name}}</a>
+      <a href="event/{{@index}}/">{{name}} {{@index}}</a>
       <p class="">{{description}}</p>
       <p class="date">{{date}}</p>
     </h2>
