--- a/templates/components/shared/site-navigation.hbs
+++ b/templates/components/shared/site-navigation.hbs
@@ -5,7 +5,7 @@
     </h1>
 
     <div class="menu-actions">
-      <a class="submit-event-button" href="/create-event">Submit an Event</a>
+      <a class="submit-event-button" href="create-event">Submit  Event</a>
     </div>
   </div>
 </nav>
