--- a/templates/create-event.hbs
+++ b/templates/create-event.hbs
@@ -1,5 +1,37 @@
 <section id="create-event-page">
   <div class="content-container">
     <h1>Create Event</h1>
+    const model = {
+  category: 'Music',
+  address: '123 Main Street',
+  city: 'Canyon',
+  state: 'Texas',
+  zipCode: '79102',
+  categories: ['Foo', 'Bar', 'Biz']
+};
+  <form>
+    <label for"evt_name">Event Name</label>
+    <input type="text" name"evt_name" id="evt_name">
+    <label for"evt_description">Description</label>
+    <input type="text" name"evt_description" id="evt_description">
+    <label for"evt_date">Date</label>
+    <input type="text" name"evt_date" id="evt_date">
+    <label for"evt_price">Price</label>
+    <input type="number" name"evt_price" id="evt_price">
+    <label for"evt_category">Category</label>
+    <input type="text" name"evt_category" id="evt_category">
+    <label for"evt_address">Address</label>
+    <input type="text" name"evt_address" id="evt_address">
+    <label for"evt_city">City</label>
+    <input type="text" name"evt_city" id="evt_city">
+    <label for"evt_state">State</label>
+    <input type="text" name"evt_state" id="evt_state">
+    <label for"evt_zip">Zip</label>
+    <input type="number" name"evt_zip" id="evt_zip">
+    <label for"evt_tag">Tag</label>
+    <input type="text" name"evt_tag" id="evt_tag">
+    
+  </form>
+
   </div>
 </section>
