Modify mock data, service to filter data

--- a/templates/components/homepage/featured-events.hbs
+++ b/templates/components/homepage/featured-events.hbs
@@ -1,5 +1,5 @@
 <section class="featured-events">
-  {{#each featuredEvents}}
+  {{#each events}}
   <div class="featured-event">
     <h2>
       <a href="event/{{@index}}/">{{name}} {{@index}}</a>
