--- a/templates/event-details.hbs
+++ b/templates/event-details.hbs
@@ -1,5 +1,7 @@
 <section id="event-details-page">
   <div class="content-container">
     <h1>Event Details Page</h1>
+    <label>Name</label>
+    {{name}}
   </div>
 </section>
