The mock service return today/tomorrow/nextweek lists, individual events by eventid and adds a model to the list.
Got the view event detail to pull from the mock data based on eventId.

The submit new will show a form and save default values to the mock data.

--- a/templates/components/homepage/featured-events.hbs
+++ b/templates/components/homepage/featured-events.hbs
@@ -1,8 +1,8 @@
 <section class="featured-events">
-  {{#each events}}
+  {{#each featured}}
   <div class="featured-event">
     <h2>
-      <a href="event/{{@index}}/">{{name}} {{@index}}</a>
+      <a href="event/{{eventId}}/">{{name}} {{eventId}}</a>
       <p class="">{{description}}</p>
       <p class="date">{{date}}</p>
     </h2>
