--- a/templates/event-details.hbs
+++ b/templates/event-details.hbs
@@ -1,7 +1,12 @@
 <section id="event-details-page">
   <div class="content-container">
     <h1>Event Details Page</h1>
-    <label>Name</label>
-    {{name}}
+       <div class="left-details">
+         <h4>{{name}}</h4>
+         <p class="date">{{date}}</p>
+         <p class="price">{{price}}</p>
+         <p class="description">{{description}}</p>
+         
+       </div>
   </div>
 </section>
