--- a/templates/create-event.hbs
+++ b/templates/create-event.hbs
@@ -1,37 +1,47 @@
 <section id="create-event-page">
+
+  {{#if new}}
   <div class="content-container">
+
     <h1>Create Event</h1>
-    const model = {
-  category: 'Music',
-  address: '123 Main Street',
-  city: 'Canyon',
-  state: 'Texas',
-  zipCode: '79102',
-  categories: ['Foo', 'Bar', 'Biz']
-};
-  <form>
+
+  <form action='/create-event/save'>
     <label for"evt_name">Event Name</label>
-    <input type="text" name"evt_name" id="evt_name">
+    <input type="text" name"evt_name" id="evt_name" value="{{name}}">
+    <br>
     <label for"evt_description">Description</label>
-    <input type="text" name"evt_description" id="evt_description">
+    <input type="text" name"evt_description" id="evt_description"  value="{{description}}">
+    <br>
     <label for"evt_date">Date</label>
-    <input type="text" name"evt_date" id="evt_date">
+    <input type="text" name"evt_date" id="evt_date"  value="{{date}}">
+    <br>
     <label for"evt_price">Price</label>
-    <input type="number" name"evt_price" id="evt_price">
+    <input type="number" name"evt_price" id="evt_price"  value="{{price}}">
+    <br>
     <label for"evt_category">Category</label>
-    <input type="text" name"evt_category" id="evt_category">
+    <input type="text" name"evt_category" id="evt_category"  value="{{category}}">
+    <br>
     <label for"evt_address">Address</label>
     <input type="text" name"evt_address" id="evt_address">
+    <br>
     <label for"evt_city">City</label>
-    <input type="text" name"evt_city" id="evt_city">
+    <input type="text" name"evt_city" id="evt_city"  value="{{city}}">
+    <br>
     <label for"evt_state">State</label>
-    <input type="text" name"evt_state" id="evt_state">
+    <input type="text" name"evt_state" id="evt_state"  value="{{state}}">
+    <br>
     <label for"evt_zip">Zip</label>
     <input type="number" name"evt_zip" id="evt_zip">
+    <br>
     <label for"evt_tag">Tag</label>
     <input type="text" name"evt_tag" id="evt_tag">
-    
+    <br>
+    <div class="menu-actions">
+    <a class="submit-event-button" href="save">Submit  Event</a>
+    </div>
   </form>
-
   </div>
+{{else}}
+{{> event-details }}
+{{/if}}
 </section>
